started working on django gui and search form

--- a/recettes_gui/templates/index.html
+++ b/recettes_gui/templates/index.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 {% block index %}
 
-<div class="max-w-sm mx-auto">
-    <h2 class="text-2xl">Chercher une recette</h2>
-    <form class="my-6" method="post">
-        {% csrf_token %} {% load tailwind_filters %} {{ form|crispy }}
-        <input type="submit" class="px-4 py-2 bg-green-500 rounded w-full mt-2 text-lg text-white cursor-pointer" value="Save">
-    </form>
-</div>
+<form action="/search/" method="post">
+    {% csrf_token %}
+    {{ form }}
+
+    <p><input id="id_subject" type="text" name="subject" maxlength="100" required class=''>
+    <input type="submit" value="Recherche" class='my-4 p-1 bg-gray-800 hover:bg-gray-900 hover:text-white'></p>
+</form>
 
 {% endblock %}
