added template structure

--- a/recettes_gui/templates/base.html
+++ b/recettes_gui/templates/base.html
@@ -30,7 +30,7 @@
 
     <nav class='z-50 fixed flex shadow-md w-full h-auto font-medium font-mono md:font-sans md:font-semibold tracking-tigher md:tracking-wide bg-white font-sans text-center text-xs md:text-base lg:text-lg'>
         <a href='/update' class='inline-block flex-auto py-4 hover:bg-blue-900 hover:text-white lg:ml-40'>Mettre à jour les recettes</a>
-        <a href='/A-z' class='inline-block flex-auto py-4 hover:bg-blue-900 hover:text-white'>Liste A à Z</a>
+        <a href='/az' class='inline-block flex-auto py-4 hover:bg-blue-900 hover:text-white'>Liste A à Z</a>
         <a href='/' class='inline-block flex-auto py-4 hover:bg-blue-900 hover:text-white lg:mr-40'>Page principale</a>
     </nav>
 
