--- a/recettes_gui/templates/az.html
+++ b/recettes_gui/templates/az.html
@@ -1,5 +1,21 @@
 {% extends 'base.html' %}
 {% block index %}
 
+<table class='bg-gray-100 table-fixed'>
+    <tr class='bg-blue-900 text-white'>
+        <th class='w-1/3'>Recette</th>
+        <th class='w-1/6'>Préparation</th>
+        <th class='w-1/6'>Cuisson</th>
+        <th class='w-1/6'>Coût</th>
+    </tr>
+        {% for recipe in all_recipes %}
+            <tr>
+                <td><a href={{recipe.link}} class="hover:text-blue-800">{{recipe.name}}</a></td>
+                <td class='text-center'>{{recipe.prep_time}}</td>
+                <td class='text-center'>{{recipe.cook_time}}</td>
+                <td class='text-center'>{{recipe.cost}}</td>
+            </tr>
+        {% endfor %}
+</table>
 
 {% endblock %}
