--- a/recettes_gui/templates/base.html
+++ b/recettes_gui/templates/base.html
@@ -23,27 +23,33 @@
     <link rel="stylesheet" href="">
 </head>
 
-<body class="box-content relative font-mono">
+<div class='flex flex-col h-screen justify-between'>
+<nav class='z-50 fixed flex shadow-md w-full h-auto font-medium font-mono md:font-sans md:font-semibold tracking-tigher md:tracking-wide bg-white font-sans text-center text-xs md:text-base lg:text-lg'>
+    <a href='/random' class='inline-block flex-auto py-4 hover:bg-blue-900 hover:text-white lg:ml-40'>Au hasard</a>
+    <a href='/az' class='inline-block flex-auto py-4 hover:bg-blue-900 hover:text-white'>Liste A à Z</a>
+    <a href='/' class='inline-block flex-auto py-4 hover:bg-blue-900 hover:text-white lg:mr-40'>Page principale</a>
+</nav>
+
+<body class="font-mono flex-grow bg-gray-200">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <nav class='z-50 fixed flex shadow-md w-full h-auto font-medium font-mono md:font-sans md:font-semibold tracking-tigher md:tracking-wide bg-white font-sans text-center text-xs md:text-base lg:text-lg'>
-        <a href='/update' class='inline-block flex-auto py-4 hover:bg-blue-900 hover:text-white lg:ml-40'>Mettre à jour les recettes</a>
-        <a href='/az' class='inline-block flex-auto py-4 hover:bg-blue-900 hover:text-white'>Liste A à Z</a>
-        <a href='/' class='inline-block flex-auto py-4 hover:bg-blue-900 hover:text-white lg:mr-40'>Page principale</a>
-    </nav>
-
-    <div class="bg-gray-200 h-max-full w-full py-16 md:py-24 px-8 md:px-32 lg:px-48">
+    <div class="py-16 md:py-24 px-8 md:px-32 lg:px-48">
         {% block index %}
+        {% endblock %}
+        {% block az %}
+        {% endblock %}
+        {% block random %}
         {% endblock %}
 
     </div>
 
 </body>
 
-<footer class='bg-gray-800 py-2'>
+<footer class='bg-gray-800 py-2 fixed bottom-0 w-full'>
     <p class='text-right px-8 text-xs md:text-base text-white'>© 2021 - Pierre Merlet</p>
 </footer>
+</div>
 
 </html>
