--- a/recettes_gui/templates/random.html
+++ b/recettes_gui/templates/random.html
@@ -1,20 +1,21 @@
 {% extends 'base.html' %}
-{% block az %}
+{% block random %}
 
-<table class='bg-gray-100 table-fixed'>
-    <tr class='bg-blue-900 text-white'>
+<table class='bg-gray-100 table-fixed mt-auto'>
+    <tr class='bg-blue-900 text-white border-8 border-blue-900'>
         <th class='w-1/3'>Recette</th>
         <th class='w-1/6'>Préparation</th>
         <th class='w-1/6'>Cuisson</th>
         <th class='w-1/6'>Coût</th>
     </tr>
-        {% for recipe in all_recipes %}
-            <tr>
+        {% for recipe in random_recipes|slice:":5"%}
+            <tr class='border-gray-100 border-8'>
                 <td><a href={{recipe.link}} class="hover:text-blue-800">{{recipe.name}}</a></td>
                 <td class='text-center'>{{recipe.prep_time}}</td>
                 <td class='text-center'>{{recipe.cook_time}}</td>
                 <td class='text-center'>{{recipe.cost}}</td>
             </tr>
+
         {% endfor %}
 </table>
 
