added search and filter functionality

--- a/recettes_gui/templates/base.html
+++ b/recettes_gui/templates/base.html
@@ -42,6 +42,8 @@
         {% endblock %}
         {% block random %}
         {% endblock %}
+        {% block search%}
+        {% endblock %}
 
     </div>
 
