--- a/recettes_gui/templates/index.html
+++ b/recettes_gui/templates/index.html
@@ -2,12 +2,17 @@
 {% block index %}
 
 <div class='flex mt-48 justify-center'>
-<form action="/search/" method="post">
+    <form method="GET" action="/search/" id="searchform">
     {% csrf_token %}
     {{ form }}
-
-    <p><input id="id_subject" type="text" name="subject" maxlength="100" required class='py-2 px-5 border border-gray-400'>
-    <input type="submit" value="Recherche" class='my-4 p-2 text-white bg-blue-900 hover:bg-gray-800'></p>
+    
+    <input class='py-2.5 px-8 border border-gray-400 rounded' id="searchbox" name="q" type="text" value="{{ request.GET.q }}" placeholder="Recette ou ingrédient"required>
+    <select name="filter" class="bg-white py-3 px-1 rounded border border-gray-400 text-gray-600">
+        <option value="ingredient">Ingrédient</option>
+        <option value="recipe">Recette</option>
+        <option value="both">Les deux</option>
+    </select>
+    <input type="submit" value="Recherche" class='my-4 p-2.5 text-white bg-blue-900 rounded hover:bg-gray-800'></p>
 </form>
 </div>
 
