--- a/recettes_gui/templates/base.html
+++ b/recettes_gui/templates/base.html
@@ -25,9 +25,9 @@
 
 <div class='flex flex-col h-screen justify-between'>
 <nav class='z-50 fixed flex shadow-md w-full h-auto font-medium font-mono md:font-sans md:font-semibold tracking-tigher md:tracking-wide bg-white font-sans text-center text-xs md:text-base lg:text-lg'>
-    <a href='/random' class='inline-block flex-auto py-4 hover:bg-blue-900 hover:text-white lg:ml-40'>Au hasard</a>
+    <a href='/' class='inline-block flex-auto py-4 bg-blue-900 hover:bg-gray-800 text-white'>Idées Recettes</a>
+    <a href='/random' class='inline-block flex-auto py-4 hover:bg-blue-900 hover:text-white'>Au hasard</a>
     <a href='/az' class='inline-block flex-auto py-4 hover:bg-blue-900 hover:text-white'>Liste A à Z</a>
-    <a href='/' class='inline-block flex-auto py-4 hover:bg-blue-900 hover:text-white lg:mr-40'>Page principale</a>
 </nav>
 
 <body class="font-mono flex-grow bg-gray-200">
