--- a/recettes_gui/templates/search.html
+++ b/recettes_gui/templates/search.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
 {% block search %}
 
-<div class='flex mb-8 justify-center'>
+<div class='flex mb-4 justify-center font-bold text-lg'>
     {{ searched_item.count }} résultats correspondant
 </div>
+
+{% if athlete_list %}
 <table class='bg-gray-100 table-fixed mt-auto'>
     <tr class='bg-blue-900 text-white border-8 border-blue-900'>
         <th class='w-1/3'>Recette</th>
@@ -18,8 +20,15 @@
                 <td class='text-center'>{{recipe.cook_time}}</td>
                 <td class='text-center'>{{recipe.cost}}</td>
             </tr>
-
-        {% endfor %}
+            {% endfor %}
 </table>
+{% else %}
+<div class='flex mb-4 justify-center italic text-lg'>
+    La recherche n'a retournée aucun résultat
+</div>
+<div class='flex justify-center mt-32'>
+    <a href='/' class='bg-blue-900 p-2 text-white hover:bg-gray-800 rounded shadow-lg'>Retourner à la page principale</a>
+</div>
+{% endif %}
 
 {% endblock %}
