fixed header in az.html

--- a/recettes_gui/templates/base.html
+++ b/recettes_gui/templates/base.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="">
 </head>
 
-<div class='flex flex-col h-screen justify-between'>
+<div class='flex flex-col'>
 <nav class='z-50 fixed flex shadow-md w-full h-auto font-medium font-mono md:font-sans md:font-semibold tracking-tigher md:tracking-wide bg-white font-sans text-center text-xs md:text-base lg:text-lg'>
     <a href='/' class='inline-block flex-auto py-4 bg-blue-900 hover:bg-gray-800 text-white'>Idées Recettes</a>
     <a href='/random' class='inline-block flex-auto py-4 hover:bg-blue-900 hover:text-white'>Au hasard</a>
@@ -35,7 +35,7 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <div class="py-16 md:py-24 px-8 md:px-32 lg:px-48">
+    <div class="px-8 md:px-32 lg:px-48">
         {% block index %}
         {% endblock %}
         {% block az %}
