--- a/recettes_gui/templates/az.html
+++ b/recettes_gui/templates/az.html
@@ -1,24 +1,37 @@
 {% extends 'base.html' %}
 {% block az %}
+<div class=''>
+    <div class="sticky top-14 bg-gray-200">
+        <div class='flex py-4 justify-center font-bold text-lg'>
+            {{ all_recipes.count }} recettes dans la base de données
+        </div>
 
-<div class='flex mb-4 justify-center font-bold text-lg'>
-    {{ all_recipes.count }} recettes dans la base de données
-</div>
-<table class='bg-gray-100 table-fixed'>
-    <tr class='bg-blue-900 text-white'>
-        <th class='w-1/3'>Recette</th>
-        <th class='w-1/6'>Préparation</th>
-        <th class='w-1/6'>Cuisson</th>
-        <th class='w-1/6'>Coût</th>
-    </tr>
-        {% for recipe in all_recipes %}
-            <tr>
-                <td><a href={{recipe.link}} class="hover:text-blue-800">{{recipe.name}}</a></td>
-                <td class='text-center'>{{recipe.prep_time}}</td>
-                <td class='text-center'>{{recipe.cook_time}}</td>
-                <td class='text-center'>{{recipe.cost}}</td>
+        <table class='table-fixed w-full mb-16'>
+            <tr class='bg-blue-900 text-white'>
+                <td class='w-1/3 text-center py-2'>Recette</th>
+                <td class='w-1/6 text-center'>Préparation</th>
+                <td class='w-1/6 text-center'>Cuisson</th>
+                <td class='w-1/6 text-center'>Coût</th>
             </tr>
-        {% endfor %}
-</table>
+        </table>
+    </div>
 
+    <table class='bg-gray-100 table-fixed'>
+        <tr>
+            <th class='w-1/3'></th>
+            <th class='w-1/6'></th>
+            <th class='w-1/6'></th>
+            <th class='w-1/6'></th>
+        </tr>
+            {% for recipe in all_recipes %}
+                <tr>
+                    <td><a href={{recipe.link}} class="hover:text-blue-800">{{recipe.name}}</a></td>
+                    <td class='text-center'>{{recipe.prep_time}}</td>
+                    <td class='text-center'>{{recipe.cook_time}}</td>
+                    <td class='text-center'>{{recipe.cost}}</td>
+                </tr>
+            {% endfor %}
+    </table>
+
+</div>
 {% endblock %}
