--- a/recettes_gui/templates/search.html
+++ b/recettes_gui/templates/search.html
@@ -1,34 +1,45 @@
 {% extends 'base.html' %}
 {% block search %}
-
-<div class='flex mb-4 justify-center font-bold text-lg'>
-    {{ searched_item.count }} résultats correspondant
-</div>
-
-{% if athlete_list %}
-<table class='bg-gray-100 table-fixed mt-auto'>
-    <tr class='bg-blue-900 text-white border-8 border-blue-900'>
-        <th class='w-1/3'>Recette</th>
-        <th class='w-1/6'>Préparation</th>
-        <th class='w-1/6'>Cuisson</th>
-        <th class='w-1/6'>Coût</th>
-    </tr>
-        {% for recipe in searched_item %}
-            <tr class='border-gray-100 border-8'>
-                <td><a href={{recipe.link}} class="hover:text-blue-800">{{recipe.name}}</a></td>
-                <td class='text-center'>{{recipe.prep_time}}</td>
-                <td class='text-center'>{{recipe.cook_time}}</td>
-                <td class='text-center'>{{recipe.cost}}</td>
+<div class=''>
+    <div class="sticky top-14 bg-gray-200">
+        <div class='flex py-4 justify-center font-bold text-lg mt-16'>
+            {{ searched_item.count }} résultats correspondant à la recherche
+        </div>
+    {% if searched_item %}
+        <table class='table-fixed w-full mb-16'>
+            <tr class='bg-blue-900 text-white'>
+                <td class='w-1/3 text-center py-2'>Recette</th>
+                <td class='w-1/6 text-center'>Préparation</th>
+                <td class='w-1/6 text-center'>Cuisson</th>
+                <td class='w-1/6 text-center'>Coût</th>
             </tr>
-            {% endfor %}
-</table>
-{% else %}
-<div class='flex mb-4 justify-center italic text-lg'>
-    La recherche n'a retournée aucun résultat
-</div>
-<div class='flex justify-center mt-32'>
-    <a href='/' class='bg-blue-900 p-2 text-white hover:bg-gray-800 rounded shadow-lg'>Retourner à la page principale</a>
-</div>
-{% endif %}
+        </table>
+    </div>
 
+    <table class='bg-gray-100 table-fixed mb-16'>
+        <tr>
+            <th class='w-1/3'></th>
+            <th class='w-1/6'></th>
+            <th class='w-1/6'></th>
+            <th class='w-1/6'></th>
+        </tr>
+            {% for recipe in searched_item %}
+                <tr>
+                    <td><a href={{recipe.link}} class="hover:text-blue-800">{{recipe.name}}</a></td>
+                    <td class='text-center'>{{recipe.prep_time}}</td>
+                    <td class='text-center'>{{recipe.cook_time}}</td>
+                    <td class='text-center'>{{recipe.cost}}</td>
+                </tr>
+            {% endfor %}
+    </table>
+
+    {% else %}
+    <div class='flex mb-16 justify-center italic text-lg'>
+        La recherche n'a retournée aucun résultat
+    </div>
+    <div class='flex justify-center mt-32'>
+        <a href='/' class='bg-blue-900 p-2 text-white hover:bg-gray-800 rounded shadow-lg'>Retourner à la page principale</a>
+    </div>
+    {% endif %}
+</div>
 {% endblock %}
