--- a/recettes_gui/templates/random.html
+++ b/recettes_gui/templates/random.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block random %}
 
-<table class='bg-gray-100 table-fixed mt-auto'>
+<table class='bg-gray-100 table-fixed mt-48'>
     <tr class='bg-blue-900 text-white border-8 border-blue-900'>
         <th class='w-1/3'>Recette</th>
         <th class='w-1/6'>Préparation</th>
