--- a/recettes_gui/templates/search.html
+++ b/recettes_gui/templates/search.html
@@ -16,7 +16,7 @@
         </table>
     </div>
 
-    <table class='bg-gray-100 table-fixed mb-16'>
+    <table class='bg-gray-100 w-full table-fixed mb-16'>
         <tr>
             <th class='w-1/3'></th>
             <th class='w-1/6'></th>
