Replace links in az and search results to custom template

--- a/recettes_gui/templates/base.html
+++ b/recettes_gui/templates/base.html
@@ -44,6 +44,8 @@
         {% endblock %}
         {% block search%}
         {% endblock %}
+        {% block recipe_details %}
+        {% endblock %}
 
     </div>
 
