--- a/recettes_gui/templates/search.html
+++ b/recettes_gui/templates/search.html
@@ -25,7 +25,7 @@
         </tr>
             {% for recipe in searched_item %}
                 <tr>
-                    <td><a href={{recipe.link}} class="hover:text-blue-800">{{recipe.name}}</a></td>
+                    <td><a href='/recipe_details/{{recipe.id}}/' class="hover:text-blue-800">{{recipe.name}}</a></td>
                     <td class='text-center'>{{recipe.prep_time}}</td>
                     <td class='text-center'>{{recipe.cook_time}}</td>
                     <td class='text-center'>{{recipe.cost}}</td>
